patch discord rpc 1.1.1

--- a/game/config/simple-rpc.toml
+++ b/game/config/simple-rpc.toml
@@ -83,7 +83,7 @@
 [multi_player]
 	enabled = true
 	description = "QMC Launcher"
-	state = "Играет на сервере - %players% игроков"
+	state = "Играет на сервере"
 	largeImageKey = "mclogonew"
 	largeImageText = "Майнкрафт %mcver%, запущенный через QMC Launcher"
 	smallImageKey = "diamond"
